--- a/app/mercury.html
+++ b/app/mercury.html
@@ -17,6 +17,9 @@
             href="https://unpkg.com/simplebar@latest/dist/simplebar.css"
         />
         <link rel="stylesheet" href="css/videotube.min.css" />
+        <link rel="stylesheet" href="css/videotube.min.css" />
+        <link rel="stylesheet" href="/css/lightgallery-bundle.min.css" />
+
         <link rel="stylesheet" href="css/style.min.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://kit.fontawesome.com/90e3df6b25.js" crossorigin="anonymous"></script>
@@ -915,6 +918,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/lightgallery.umd.js"></script>
+
     <script src="js/simplebar.js"></script>
     <script src="js/videotube.min.js"></script>
     <script src="js/main.js"></script>
