--- a/app/stellar-system.html
+++ b/app/stellar-system.html
@@ -137,9 +137,8 @@
                     Главная
                 </a>
             </li>
-
             <li class="breadcrumbs__item breadcrumbs__item--active">
-                <a href="#" class="breadcrumbs__item-link"> Астероиды </a>
+                <a href="#" class="breadcrumbs__item-link"> Звёздная система</a>
             </li>
         </ul>
     </div>
@@ -147,7 +146,7 @@
 <div class="main-head">
     <div class="container">
         <h1 class="main-head__title">
-            Астероиды для заголовка первого уровня с дополнительными словами
+            Звёздная система для супер заголовка по SEO и не только
         </h1>
     </div>
 </div>
@@ -165,7 +164,7 @@
 <div class="article-image">
     <div class="container">
         <img
-            src="/images/article-bg.jpg"
+            src="/images/stellar-system.jpg"
             alt="article-bg"
             class="article-image__img"
         />
@@ -198,80 +197,144 @@
         </div>
     </div>
 </div>
-
 <div class="main-content">
     <div class="container">
         <div class="main-content__wrapper">
             <h2 class="main-content__title">Заголовок второго уровня</h2>
             <p class="main-content__text">
-                <span>Астеро́ид</span> (распространённый до 2006 года
-                синоним — малая планета)  — относительно небольшое небесное
-                тело Солнечной системы, движущееся по орбите вокруг Солнца.
-                Астероиды значительно уступают по массе и размерам планетам,
-                имеют неправильную форму и не имеют атмосферы, хотя при этом и у
-                них могут быть спутники. Входят в категорию малых тел Солнечной
-                системы.
+                Звёздная система — гравитационно связанная система из нескольких
+                звёзд  с замкнутыми орбитами. Крупные системы гравитационно
+                связанных звёзд называются звёздными скоплениями и галактиками.
+                Звёздные системы не следует путать с планетными системами,
+                состоящими из одной звезды и различных
+                незвездообразных астрономических объектов, таких
+                как планеты или астероиды, которые движутся вокруг общего центра
+                масс.
             </p>
-            <div class="tabel-list">
-                <p class="tabel-list__title">Список астероидов:</p>
+            <div class="tabel-list tabel-list--orange">
+                <p class="tabel-list__title">Некоторые звёздные системы:</p>
                 <div class="tabel-list__wrapper">
                     <ul class="tabel-list__list">
-                        <li class="tabel-list__item">Церера</li>
-                        <li class="tabel-list__item">Паллада</li>
-                        <li class="tabel-list__item">Юнона</li>
-                        <li class="tabel-list__item">Веста</li>
-                        <li class="tabel-list__item">Астрея</li>
-                        <li class="tabel-list__item">Геба</li>
-                        <li class="tabel-list__item">Флора</li>
-                        <li class="tabel-list__item">Метида</li>
+                        <li class="tabel-list__item">Сириус  </li>
+                        <li class="tabel-list__item">Мицар</li>
+                        <li class="tabel-list__item">Кастор</li>
                     </ul>
                     <ul class="tabel-list__list">
-                        <li class="tabel-list__item">Эгерия</li>
-                        <li class="tabel-list__item">Ирена</li>
-                        <li class="tabel-list__item">Эвномия</li>
-                        <li class="tabel-list__item">Психея</li>
-                        <li class="tabel-list__item">Фетида</li>
-                        <li class="tabel-list__item">Мельпомена</li>
-                        <li class="tabel-list__item">Гигея</li>
-                        <li class="tabel-list__item">Парфенопа</li>
+                        <li class="tabel-list__item">Луман 16</li>
+                        <li class="tabel-list__item">Лебедь X-1</li>
+                        <li class="tabel-list__item">Ещё одна</li>
                     </ul>
                     <ul class="tabel-list__list">
-                        <li class="tabel-list__item">Фокея</li>
-                        <li class="tabel-list__item">Прозерпина</li>
-                        <li class="tabel-list__item">Эвтерпа</li>
-                        <li class="tabel-list__item">Беллона</li>
-                        <li class="tabel-list__item">Амфитрита</li>
-                        <li class="tabel-list__item">Урания</li>
-                        <li class="tabel-list__item">Виктория</li>
-                        <li class="tabel-list__item">Ирида</li>
+                        <li class="tabel-list__item">ν Скорпиона</li>
+                        <li class="tabel-list__item">α Центавра</li>
+                        <li class="tabel-list__item">4 Центавра</li>
                     </ul>
                     <ul class="tabel-list__list">
-                        <li class="tabel-list__item">Фортуна</li>
-                        <li class="tabel-list__item">Массалия</li>
-                        <li class="tabel-list__item">Лютеция</li>
-                        <li class="tabel-list__item">Каллиопа</li>
-                        <li class="tabel-list__item">Талия</li>
-                        <li class="tabel-list__item">Фемида</li>
+                        <li class="tabel-list__item">GJ 1245</li>
+                        <li class="tabel-list__item">SCR 1845-6357</li>
+                        <li class="tabel-list__item">Крюгер 60 (DO Цефея)</li>
                     </ul>
                 </div>
             </div>
-            <h2 class="main-content__title">Опасность астероидов</h2>
+            <h2 class="main-content__title">Двойные звёздные системы</h2>
+            <div class="main-content__example">
+                <div class="main-content__grey-bg"></div>
+            </div>
             <p class="main-content__text">
-                Несмотря на то, что Земля значительно больше всех известных
-                астероидов, столкновение с телом размером более 3 км может
-                привести к уничтожению цивилизации. Столкновение с телом
-                меньшего размера (но более 50 метров в диаметре) может привести
-                к многочисленным жертвам и гигантскому экономическому ущербу.Чем
-                больше и тяжелее астероид, тем большую опасность он
-                представляет, однако и обнаружить его в этом случае гораздо
-                легче. Наиболее опасным на данный момент считается
-                астероид Апофис, диаметром около 300 м, при столкновении с
-                которым может быть уничтожена целая страна.
+                Звёздные системы из двух звёзд называются двойными звёздами, или
+                двойными звёздными системами. При отсутствии приливных эффектов,
+                возмущений от других сил и передачи массы от одной звезды к
+                другой, такая система устойчива, и обе звезды будут
+                неограниченно долго двигаться
+                по эллиптической орбите вокруг центра масс системы (см. Задача
+                двух тел).
             </p>
-            <p class="main-content__title-min">
-                Оценки последствий падения астероидов
+            <h2 class="main-content__title">Фотогалерея звёздных систем</h2>
+            <div class="main-content__gallery" id="lightgallery">
+                <a href="images/sun.jpg" class="main-content__gallery-link">
+                    <img
+                        src="images/sun.jpg"
+                        class="main-content__gallery-img"
+                    />
+                </a>
+                <a
+                    href="images/sun-include.jpg"
+                    class="main-content__gallery-link"
+                >
+                    <img
+                        src="images/sun-include.jpg"
+                        class="main-content__gallery-img"
+                    />
+                </a>
+                <a
+                    href="images/stellar-system.jpg"
+                    class="main-content__gallery-link"
+                >
+                    <img
+                        src="images/stellar-system.jpg"
+                        class="main-content__gallery-img"
+                    />
+                </a>
+                <a
+                    href="images/sun-video.jpg"
+                    class="main-content__gallery-link"
+                >
+                    <img
+                        src="images/sun-video.jpg"
+                        class="main-content__gallery-img"
+                    />
+                </a>
+            </div>
+            <p class="main-content__gallery-caption">
+                Лицензия №124-777 Copyright AUTHOR 2017
             </p>
-            <div class="main-content__grey-bg"></div>
+            <h2 class="main-content__title">
+                Системы с более чем двумя звёздами
+            </h2>
+            <p class="main-content__text">
+                Системы с более чем двумя звёздами также возможны:
+                например, звёздное скопление и галактика — виды звёздных систем.
+                Из-за большого размера этих систем, их динамика значительно
+                сложнее, чем у двойной звезды. Однако, также возможно
+                существование звёздных систем с небольшим (но больше двух)
+                количеством звёзд и простой орбитальной динамикой.
+                <br /><br />
+                Эти системы называются кратными звёздными системами, или
+                физически кратными звёздами. Кратная звёздная система, состоящая
+                из трёх звёзд, называется тройной.
+            </p>
+            <h2 class="main-content__title">Тройные звёздные системы</h2>
+            <p class="main-content__text">
+                Тройные звёздные системы — наиболее распространённый тип кратных
+                систем. Например, в издании 1999 года каталога физически кратных
+                звёзд Токовинина[5], 551 из 728 систем описаны как тройные. В
+                соответствии с иерархическим принципом тройные звёздные системы
+                обычно состоят из пары близко расположенных звёзд с более
+                удалённым спутником.
+            </p>
+            <div
+                class="main-content__gallery main-content__gallery--2"
+                id="lightgallery2"
+            >
+                <a href="images/sun.jpg" class="main-content__gallery-link">
+                    <img
+                        src="images/sun.jpg"
+                        class="main-content__gallery-img"
+                    />
+                </a>
+                <a
+                    href="images/stellar-system.jpg"
+                    class="main-content__gallery-link"
+                >
+                    <img
+                        src="images/stellar-system.jpg"
+                        class="main-content__gallery-img"
+                    />
+                </a>
+            </div>
+            <p class="main-content__gallery-caption">
+                Лицензия №124-777 Copyright AUTHOR 2017
+            </p>
         </div>
     </div>
 </div>
@@ -542,7 +605,6 @@
         </div>
     </div>
 </div>
-
 
     <footer class="footer">
         <div class="container">
